# so-pro

./: .gitignore  Arguments.cpp  Arguments.hpp  CMakeLists.txt  Dockerfile  GUI.cpp  GUI.hpp  Makefile  README.md  Semaphore.cpp  Semaphore.h  Semaphore.hpp  URL.cpp  URL.h  URL.hpp  URL_Thread.cpp  URL_Thread.h  main.cpp  panel_browse.c  panel_simple.c  urls.txt
docker/: Dockerfile
proj/: Makefile  main  main.cpp  urls.txt
src/: Arguments.cpp  Arguments.hpp  GUI.cpp  GUI.hpp  Makefile  Semaphore.cpp  Semaphore.hpp  URL.cpp  URL.hpp  common.hpp  main.cpp
